--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="styles/reset.css" />
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
+  <link rel="stylesheet" href="css/styles.css" />
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  
+  <!--Font Awesome 5-->
+  <script src="https://kit.fontawesome.com/34b9bc8a79.js" crossorigin="anonymous"></script>
+
+
   <title>Weather Dashboard</title>
 </head>
 
@@ -37,12 +44,82 @@
             </div>
           </div>
         </form>
-        <div class="list-group" id="history"></div>
+        <div class="list-group" id="history">
+          <ul class="history-buttons">
+            <li class="list-group-item">
+              <button class="btn btn-light btn-block history-button" type="button" data-city="London">
+                London
+              </button>
+            </li>
+            <li class="list-group-item">
+              <button class="btn btn-light btn-block history-button" type="button" data-city="Paris">
+                Paris
+              </button>
+            </li>
+            <li class="list-group-item">
+              <button class="btn btn-light btn-block history-button" type="button" data-city="Tokyo">
+                Tokyo
+              </button>
+            </li>
+            <li class="list-group-item">
+              <button class="btn btn-light btn-block history-button" type="button" data-city="New York">
+                New York
+              </button>
+            </li>
+            <li class="list-group-item">
+              <button class="btn btn-light btn-block history-button" type="button" data-city="Sydney">
+                Sydney
+              </button>
+            </li>
+             <!-- <li class="list-group-item">
+              <button class="btn btn-light btn-block history-button" type="button" data-city="Melbourne">
+                Melbourne
+              </button>  -->
+          </ul>
+        </div>
       </aside>
 
       <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+        <section id="today" class="mt-3" role="region" aria-live="polite">
+          <div class="card">
+            <div class="card-body">
+              <div style="display: flex; gap: 20px">
+              <h2 class="card-title" id="city-name"></h2>
+
+              <h2 class="card-title" id="current-date"></h2>
+
+              <img src="" alt="weather icon" id="icon-from-url" />
+              </div>
+              
+              
+              <div class="row">
+                <div class="col-6">
+                  <span>
+                  <p class="card-text" id="current-temp">
+                    Temp: 
+                  </p>
+                </span>
+                  <p class="card-text" id="current-wind">
+                    <span>Wind: </span>
+                  </p>
+                  <p class="card-text" id="current-humidity">
+                    <span>Humidity: </span>
+                  </p>
+                </div>
+                <!-- <div class="col-6">
+                  <img src="" alt="weather icon" id="icon-from-url" />
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+
+        </section>
+        <section id="forecast" class="row mt-3" role="region" aria-live="polite">
+
+
+
+        </section>
       </div>
     </div>
   </div>
@@ -50,7 +127,7 @@
   <!-- Moment.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
   <!-- jQuery -->
-  <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/script.js"></script>
