fixed event listener to also wait for history buttons to be pressed

--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
               <h2 class="card-title" id="city-name"></h2>
 
               <h2 class="card-title" id="current-date"></h2>
+              <div id="icon-from-url"></div>
 
-              <img src="" alt="weather icon" id="icon-from-url" />
+              <!-- <img src="" alt="weather icon" id="icon-from-url" /> -->
               </div>
               
               
@@ -96,9 +97,8 @@
                 <div class="col-6">
                   <span>
                   <p class="card-text" id="current-temp">
-                    Temp: 
+                    <span>Temp: </span>
                   </p>
-                </span>
                   <p class="card-text" id="current-wind">
                     <span>Wind: </span>
                   </p>
