--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <!--Font Awesome 5-->
   <script src="https://kit.fontawesome.com/34b9bc8a79.js" crossorigin="anonymous"></script>
 
-
   <title>Weather Dashboard</title>
 </head>
 
@@ -44,40 +43,10 @@
             </div>
           </div>
         </form>
-        <div class="list-group" id="history">
-          <ul class="history-buttons">
-            <li class="list-group-item">
-              <button class="btn btn-light btn-block history-button" type="button" data-city="London">
-                London
-              </button>
-            </li>
-            <li class="list-group-item">
-              <button class="btn btn-light btn-block history-button" type="button" data-city="Paris">
-                Paris
-              </button>
-            </li>
-            <li class="list-group-item">
-              <button class="btn btn-light btn-block history-button" type="button" data-city="Tokyo">
-                Tokyo
-              </button>
-            </li>
-            <li class="list-group-item">
-              <button class="btn btn-light btn-block history-button" type="button" data-city="New York">
-                New York
-              </button>
-            </li>
-            <li class="list-group-item">
-              <button class="btn btn-light btn-block history-button" type="button" data-city="Sydney">
-                Sydney
-              </button>
-            </li>
-             <!-- <li class="list-group-item">
-              <button class="btn btn-light btn-block history-button" type="button" data-city="Melbourne">
-                Melbourne
-              </button>  -->
-          </ul>
-        </div>
+        <div class="list-group" id="history"></div>
+
       </aside>
+    
 
       <div class="col-lg-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite">
@@ -102,13 +71,11 @@
                     <span>Humidity: </span>
                   </p>
                 </div>
-                <!-- <div class="col-6">
-                  <img src="" alt="weather icon" id="icon-from-url" />
-                </div> -->
               </div>
             </div>
           </div>
         </section>
+        
 
         <section id="forecast" class="row mt-3" role="region" aria-live="polite">
           <div class="col-12">
@@ -119,7 +86,7 @@
             <div class="card col-2" id="day-1">
               <div class="card-body">
                 <h5 class="card-title" id="day-1-date"></h5>
-                <img src="" alt="weather icon" id="day-1-icon" />
+                <div id="day-1-icon"></div>
                 <p class="card-text" id="day-1-temp">
                   <span>Temp: </span>
                 </p>
@@ -134,12 +101,12 @@
             <div class="card col-2" id="day-2">
               <div class="card-body">
                 <h5 class="card-title" id="day-2-date"></h5>
-                <img src="" alt="weather icon" id="day-2-icon" />
+                <div id="day-2-icon"></div>
                 <p class="card-text" id="day-2-temp">
                   <span>Temp: </span>
                 </p>
                 <p class="card-text" id="day-2-wind">
-                  <span>Wind: </span>
+                  <span>Wind: </span></br>
                 </p>
                 <p class="card-text" id="day-2-humidity">
                   <span>Humidity: </span>
@@ -149,7 +116,7 @@
             <div class="card col-2" id="day-3">
               <div class="card-body">
                 <h5 class="card-title" id="day-3-date"></h5>
-                <img src="" alt="weather icon" id="day-3-icon" />
+                <div id="day-3-icon"></div>
                 <p class="card-text" id="day-3-temp">
                   <span>Temp: </span>
                 </p>
@@ -164,7 +131,8 @@
             <div class="card col-2" id="day-4">
               <div class="card-body">
                 <h5 class="card-title" id="day-4-date"></h5>
-                <img src="" alt="weather icon" id="day-4-icon" />
+                <div id="day-4-icon"></div>
+
                 <p class="card-text" id="day-4-temp">
                   <span>Temp: </span>
                 </p>
@@ -180,7 +148,7 @@
             <div class="card col-2" id="day-5">
               <div class="card-body">
                 <h5 class="card-title" id="day-5-date"></h5>
-                <img src="" alt="weather icon" id="day-5-icon" />
+                <div id="day-5-icon"></div>
                 <p class="card-text" id="day-5-temp">
                   <span>Temp: </span>
                 </p>
@@ -197,10 +165,7 @@
       </div>
     </div>
   </div>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-timezone-with-data.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-timezone.min.js"></script>
   <!-- Moment.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
   <!-- jQuery -->
@@ -209,5 +174,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/script.js"></script>
 </body>
-
 </html>
