moved some inline styles from a dav tag into the css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
 
   <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 1400px">
+  <div class="container-fluid container-max-width">
     <div class="row">
       <aside class="col-lg-3 pb-3">
         <h2 id="form-heading" class="mt-1 h3 form-label">
@@ -83,7 +83,7 @@
           </div>
 
           <div id="container" class="forecast-cards">
-            <div class="card col-2" id="day-1">
+            <div class="card" id="day-1">
               <div class="card-body">
                 <h5 class="card-title" id="day-1-date"></h5>
                 <div id="day-1-icon"></div>
@@ -98,7 +98,7 @@
                 </p>
               </div>
             </div>
-            <div class="card col-2" id="day-2">
+            <div class="card" id="day-2">
               <div class="card-body">
                 <h5 class="card-title" id="day-2-date"></h5>
                 <div id="day-2-icon"></div>
@@ -113,7 +113,7 @@
                 </p>
               </div>
             </div>
-            <div class="card col-2" id="day-3">
+            <div class="card" id="day-3">
               <div class="card-body">
                 <h5 class="card-title" id="day-3-date"></h5>
                 <div id="day-3-icon"></div>
@@ -128,7 +128,7 @@
                 </p>
               </div>
             </div>
-            <div class="card col-2" id="day-4">
+            <div class="card" id="day-4">
               <div class="card-body">
                 <h5 class="card-title" id="day-4-date"></h5>
                 <div id="day-4-icon"></div>
@@ -145,7 +145,7 @@
               </div>
             </div>
 
-            <div class="card col-2" id="day-5">
+            <div class="card" id="day-5">
               <div class="card-body">
                 <h5 class="card-title" id="day-5-date"></h5>
                 <div id="day-5-icon"></div>
